# shade

./: CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: dispatch_bench.cpp
examples/: demo.cpp
include/shade/: function.hpp
tests/: shade_tests.cpp
